...
import { gatewayProfiles } from './gatewayProfiles';
import { isLoopbackGatewayUrl, resolveDeviceGatewayUrl } from '../utils/gatewayUrlPolicy';
import { migrateNotificationPreferences } from '../utils/notificationPreferences';
import { normalizeMessageText } from '../utils/chatMessageMerge';

const KEYS = {
  SETTINGS: 'hermes-mobile:gateway_settings',
  LAST_GATEWAY_LAN_IP: 'hermes-mobile:last_gateway_lan_ip',
  RECENT_PROMPTS: 'hermes-mobile:recent_prompts',
  DISMISSED_PROMPTS: 'hermes-mobile:dismissed_prompts',
  DISMISSED_SESSION_IDS: 'hermes-mobile:dismissed_session_ids',
  HIDE_CRON_SESSIONS: 'hermes-mobile:hide_cron_sessions',
  HIDE_AUTOMATION_SESSIONS: 'hermes-mobile:hide_automation_sessions',
...
